--- a/notebooks/Dibimbing-spark-2.ipynb
+++ b/notebooks/Dibimbing-spark-2.ipynb
@@ -21,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "efc4e293-7230-4d7c-bc4f-f8ba5d4e32e8",
    "metadata": {},
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "025b23a6-c84c-48d4-87e4-94d4a9953d1b",
    "metadata": {
     "tags": []
@@ -106,7 +107,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://763678cf44df:4040\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://402bdc7229c3:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -122,7 +123,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0xffffb0038790>"
+       "<pyspark.sql.session.SparkSession at 0x7fa0b9eb7820>"
       ]
      },
      "execution_count": 5,
@@ -135,6 +136,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f486e199",
    "metadata": {},
@@ -248,6 +250,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1fc1a3c4",
    "metadata": {},
@@ -257,9 +260,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "0ba8408e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "spark.conf.set(\"spark.sql.adaptive.enabled\", \"false\")"
@@ -267,9 +272,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "5debe3b7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# define schema for purchases dataset\n",
@@ -323,9 +330,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "ee4acd54",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -366,9 +375,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "7a3fc643",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -405,6 +416,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1c4e7b6f",
    "metadata": {},
@@ -414,9 +426,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "id": "6d34ddc9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -446,9 +460,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "id": "29762444",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -456,7 +472,7 @@
        "DataFrame[order_id: int, customer_id: int, product_id: int, quantity: int, price: float]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,9 +485,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "c5362722",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pyspark.sql.functions import col\n",
@@ -487,10 +505,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d393ce0b",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[customer_id: int, sum(total_price): double]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# persist the store_purchase_totals DataFrame to disk\n",
     "store_purchase_totals.persist(pyspark.StorageLevel.DISK_ONLY)"
@@ -498,9 +529,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "id": "3cd6c04e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -525,16 +558,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "1a7311ae",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[customer_id: int, sum(total_price): double]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# unpersist the store_purchase_totals DataFrame to free up memory\n",
     "store_purchase_totals.unpersist()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "32239315",
    "metadata": {},
@@ -543,6 +590,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "07bb0765-642a-4bda-97ed-508cc1ae491a",
    "metadata": {},
@@ -552,9 +600,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "b9a81123-e2db-455a-a118-62ab7c9a9dd6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "jdbc_url = f'jdbc:postgresql://{postgres_host}/{postgres_db}'\n",
@@ -568,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "75f7b87d-7135-4cde-875e-961fae293f21",
    "metadata": {
     "tags": []
@@ -584,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "58e2aafe-7bd5-42e4-81dd-38122bc3cf1c",
    "metadata": {
     "tags": []
@@ -614,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "02307c9f-e3ae-43b5-bb8e-aa6a8ca768bd",
    "metadata": {
     "tags": []
@@ -634,6 +684,30 @@
     "    )\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9442f132-16be-4ee8-abd8-eaffe1c90fcd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "035168a4-d826-4dcf-8d2a-b659ad0ba2aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a17ff169-60af-4df0-ab07-3832daa257d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
